--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import "../../vendor/wireui/wireui/ts/global.css";
+@source '../../vendor/wireui/wireui';
 [x-cloak] {
     display: none;
 }
